Added main page which will navigate to the main tab

--- a/client/www/templates/chat-detail.html
+++ b/client/www/templates/chat-detail.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   This template loads for the 'tab.friend-detail' state (app.js)
   'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
