--- a/client/www/templates/tabs.html
+++ b/client/www/templates/tabs.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
 Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
@@ -17,7 +18,8 @@ navigation history that also transitions its views in and out.
 
   <!-- Account Tab -->
   <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+    <ion-nav-view name="tab-account">
+    </ion-nav-view>
   </ion-tab>
 
 
