--- a/client/scss/ionic.app.scss
+++ b/client/scss/ionic.app.scss
@@ -14,10 +14,15 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
-
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
+
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
+
+$font-family-base: "Oxygen", sans-serif !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+@import "global.scss";
+@import "main.scss";
