--- a/client/www/templates/tabs.html
+++ b/client/www/templates/tabs.html
@@ -4,7 +4,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive fade-in-not-out">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
@@ -21,6 +21,5 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account">
     </ion-nav-view>
   </ion-tab>
-
 
 </ion-tabs>
