--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -2,7 +2,7 @@
   text-align: center;
 
   .title {
-    height: 81vh;
+    height: 72vh;
     color: #dcdcdc;
     vertical-align: middle;
     -webkit-box-align: center;
@@ -13,8 +13,8 @@
   .button-round {
     font-size: 1.8em;
     border-radius: 45px;
-    width: 90px;
-    height: 90px;
+    width: 13.5vh;
+    height: 13.5vh;
     color: white;
   }
 }
