--- a/client/www/templates/main.html
+++ b/client/www/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ion-view view-title="Welcome" class="main">
+<ion-view class="main" hide-nav-bar="true">
   <ion-content class="padding">
 
     <h1 class="title">
