--- a/client/www/css/ionic.app.css
+++ b/client/www/css/ionic.app.css
@@ -9303,7 +9303,7 @@ ion-content {
 .main {
   text-align: center; }
   .main .title {
-    height: 81vh;
+    height: 72vh;
     color: #dcdcdc;
     vertical-align: middle;
     -webkit-box-align: center;
@@ -9312,6 +9312,6 @@ ion-content {
   .main .button-round {
     font-size: 1.8em;
     border-radius: 45px;
-    width: 90px;
-    height: 90px;
+    width: 13.5vh;
+    height: 13.5vh;
     color: white; }
