Finalized most stuffs..

--- a/client/scss/global.scss
+++ b/client/scss/global.scss
@@ -5,3 +5,7 @@ ion-content {
   background:      -o-linear-gradient(90deg, #616161 10%, #9bc5c3 90%); /* Opera 11.10+ */
   background:         linear-gradient(90deg, #616161 10%, #9bc5c3 90%); /* W3C */
 }
+
+a {
+  text-decoration: none;
+}
