--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -10,6 +10,10 @@
     display: -webkit-box;
   }
 
+  .desc {
+    color: #dcdcdc !important;
+  }
+
   .button-round {
     font-size: 1.8em;
     border-radius: 45px;
