--- a/client/www/templates/main.html
+++ b/client/www/templates/main.html
@@ -6,7 +6,7 @@
       Would you like to improve <br> Kenmore?
     </h1>
 
-    <a href="#/tab/dash">
+    <a href="#/project">
       <button class="button button-outline
       button-round">
         YES
