--- a/client/www/templates/tab-account.html
+++ b/client/www/templates/tab-account.html
@@ -2,6 +2,10 @@
 <ion-view view-title="Account">
   <ion-content>
     <ion-list>
+      <ion-toggle ng-model="settings.taskNotification">
+        Task Notification
+      </ion-toggle>
+
       <ion-toggle ng-model="settings.enableFriends">
         Enable Friends
       </ion-toggle>
