--- a/client/www/templates/tab-dash.html
+++ b/client/www/templates/tab-dash.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<ion-view view-title="Dashboard">
+<ion-view view-title="Dashboard" class="dash" cache-view="false" >
   <ion-content class="padding">
+
     <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
+      <div class="item item-divider">{{project.name}}</div>
       <div class="item item-body">
         <div>
-          There is a fire in <b>sector 3</b>
+          {{project.desc}}
         </div>
       </div>
     </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
-    </div>
+
     <div class="list card">
       <div class="item item-divider">Upcoming</div>
       <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
+        <div ng-repeat="a in  project.agen">
+          {{a}}
         </div>
       </div>
     </div>
+
+    <div class="list card">
+      <div class="item item-divider">Progress</div>
+      <div class="item item-body">
+        <div ng-repeat="p in  project.prog">
+          - {{p}}
+        </div>
+      </div>
+    </div>
+
+
   </ion-content>
 </ion-view>
