--- a/client/www/templates/tabs.html
+++ b/client/www/templates/tabs.html
@@ -4,11 +4,12 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive fade-in-not-out">
+<ion-tabs class="tabs-icon-top tabs-color-light fade-in-not-out tabs-background-dark">
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+    <ion-nav-view name="tab-dash">
+    </ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
