--- a/client/www/templates/tab-account.html
+++ b/client/www/templates/tab-account.html
@@ -3,11 +3,11 @@
   <ion-content>
     <ion-list>
       <ion-toggle ng-model="settings.taskNotification">
-        Task Notification
+        Schedule Reminder
       </ion-toggle>
 
-      <ion-toggle ng-model="settings.enableFriends">
-        Enable Friends
+      <ion-toggle ng-model="settings.chatNotification">
+        Chat Notification
       </ion-toggle>
 
       <a href="#/">
