--- a/client/www/css/ionic.app.css
+++ b/client/www/css/ionic.app.css
@@ -9300,6 +9300,9 @@ ion-content {
   background: linear-gradient(90deg, #616161 10%, #9bc5c3 90%);
   /* W3C */ }
 
+a {
+  text-decoration: none; }
+
 .main {
   text-align: center; }
   .main .title {
